# ZipfLangAdapt

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/ZipfLangAdapt/: compute_pareto.py  data_preparation.py  evolution_wrt_pareto.py  medical_idiom.py  zipfdistribution.py
